objects/BMCServiceDesk__SysQVFormatRule__c.object
<CustomObject>
    <description>This object allows you to store data for the formatting rules of QuickViews.</description>
    <fields>
        <fullName>BMCServiceDesk__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FkSYSQVQuery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKSYSQVQuery</label>
        <referenceTo>BMCServiceDesk__SYSQVQuery__c</referenceTo>
        <relationshipLabel>SysQVFormatRules</relationshipLabel>
        <relationshipName>SysQVFormatRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__displayPosition__c</fullName>
        <label>Display Position</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quickview Format Rules</label>
    <nameField>
        <displayFormat>SysQVFormatRule -{000}</displayFormat>
        <label>SysQVFormatRule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SysQVFormatRules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>